# scope-timer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  sample.py  sample_mt.py
.github/workflows/: ci.yml  release.yml
bench/: regcheck.py  workload_performance.py
bench/mem_and_summarize/: workload_performance.py
bench/overhead/: bench.py  clean.sh  gen_workload.py  run.sh  workload.py.j2
examples/: np_sample.py  pipeline_sample.py  readme_sample.py  unfinished_sample.py
scope_timer/: __init__.py  core.py  infer.py  node.py  old.py  record.py  stats.py  thread_local.py
tests/: conftest.py  test_core.py  test_infer.py  test_node.py  test_record.py  test_threading.py
