[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scope-timer"
version = "0.1.0"
description = "A lightweight profiler to measure execution time with a rich and colorful hierarchical report."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
keywords = ["profiler", "timer", "performance", "timing", "scope", "rich"]

authors = [
    { name = "skst328" },
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

# classifiersを更新
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Benchmark",
]

dependencies = [
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/skst328/scope-timer"
"Bug Tracker" = "https://github.com/skst328/scope-timer/issues"
